<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MPG Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="log_fill_up">Log\nA\nFill-Up</string>
    <string name="view_reports">View\nMPG\nReports</string>
    <string name="settings">Settings</string>
    <string name="about">About MPG Tracker</string>
    <string name="my_cars">My Vehicles</string>
    <string name="add_vehicle">+  Add A Vehicle</string>
    <string name="add_vehicle_header">Add A New Vehicle</string>
    <string name="edit_vehicle_header">Edit Vehicle</string>
    <string name="add_custom_vehicle_header">Add a Custom Vehicle</string>
    <string name="edit_custom_vehicle_header">Edit Custom Vehicle</string>
    <string name="data_sharing">Data Sharing</string>
    <string name="share_data">Share Mileage Data</string>
    <string name="share_data_text">Share non-identifying data about your fill ups and help build a community database of information about each model of vehicle.</string>
    <string name="share_usage">Share Usage Data</string>
    <string name="share_usage_text">Share non-identifying data that can help us understand how the app is used and to quickly receive crash reports.</string>

    <string name="no_cars_dashboard_header">It looks like you don\'t have any vehicles set up yet.</string>
    <string name="no_cars_dashboard_text">Touch that \"Settings\" button down there. When you get to the Settings screen, touch \"My Vehicles\", then \"Add A Vehicle\". Once you\'ve set up a vehicle or two you can begin tracking!</string>
    <string name="no_data_dashboard_header">It looks like you haven\'t logged any fill-ups yet.</string>
    <string name="no_data_dashboard_text">Once you have logged a fill-up, your most recent MPG will show up in this space. For now, touch that big \"Log A Fill-Up\" button down there the next time you stop at the gas station.</string>
    <string name="most_recent_fillup">Last Fill-Up</string>
    <string name="did_you_know">Did you Know?</string>
    <string name="furlongs_did_you_know">Since there are 8 furlongs in a mile, and 8 pints in a gallon, your car gets the same furlongs-per-pint as it gets miles-per-gallon.</string>
    <string name="lets_do_it">Let\'s Do It!</string>
    <string name="furlongs_per_pint">Furlongs Per Pint</string>

    <string name="none">none</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>

    <string name="select">Select&#8230;</string>

    <string name="save">Save</string>
    <string name="save_error">There was an error saving your vehicle. Please check your data and try again.</string>
    <string name="car_not_listed">My Car Isn\'t Listed</string>
    <string name="year">Year</string>
    <string name="year_error">Sorry, there are no results for the selected year.</string>
    <string name="make">Make</string>
    <string name="make_error">Sorry, there are no results for the year and make you selected.</string>
    <string name="model">Model</string>
    <string name="trim">Trim</string>
    <string name="delete_car">Are you sure you want to delete this vehicle?</string>
    <string name="delete_error">There was an error deleting your vehicle. Please try again.</string>
    <string name="fetching_data">Getting Data&#8230;</string>
    <string name="need_valid_year">Please input a valid year with no more than 4 digits</string>

    <string name="log_fill_up_header">Log A Fill-Up</string>
    <string name="vehicle">Vehicle</string>
    <string name="miles_input_label">Miles Since Last Fill-Up</string>
    <string name="miles">Miles</string>
    <string name="gallons_input_label">Gallons</string>
    <string name="price_per_gallon">Price Per Gallon</string>
    <string name="mpg">MPG</string>
    <string name="miles_per_gallon">Miles Per Gallon</string>
    <string name="double_dashes">--</string>
    <string name="cost_per_mile_label">/Mile</string>
    <string name="miles_gallons_required">Please input valid entries for miles and gallons.</string>
    <string name="must_have_a_vehilce">You must have at least one vehicle saved. Please set up a vehicle and come back when you\'re done</string>
    <string name="no_logs_for_vehicle">You have not logged any fill-ups for this vehicle. Do you want to enter some information?</string>
    <string name="records">Records</string>

    <string name="reports_header">MPG History</string>
    <string name="per_gallon">/Gallon</string>
    <string name="gallons_ytd">Gallons YTD</string>
    <string name="ytd">YTD</string>
    <string name="my_average">My\nAverage</string>
    <string name="community_average">Community\nAverage</string>

    <string name="about_text" formatted="false"><b>Android MPG Tracker</b> is a simple application that helps you keep track of your gas mileage over time and see your trend over time.\n\n<b>Step One:</b> \nUse the Settings Screen to set up your vehicle profiles. Touch My Vehicles, then Add A Vehicle. Use the dropdowns to select your car\'s year, make, model and trim. Set up as many vehicles as you plan to drive regularly.\n\n<b>Step Two:</b> \nTrack your mileage. If you\'re tracking your mileage we know you\'re already diligent about resetting your trip odometer and putting the mileage and fill-up through your phone\'s calculator. Just keep doing that but instead select Track a Fill-Up from the main screen, select your car from the dropdown and input the data.\n\n<b>Step Three:</b> \nSee how your last tank compares to previous tanks. Over time we will continue to collect data from other drivers of the same vehicle, and as that data builds up you will be able to compare your performance to the community as a whole.\n\n<i>(Data behind vehicle selection is provided by Edmunds)</i></string>

    <string name="checking_for_existing_data">Checking for existing data from another installation of MPG Tracker</string>
    <string name="transfering_data">Transferring existing data from another installation of MPG Tracker</string>

</resources>
