<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/black">

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/add_custom_vehicle_header"
        android:textColor="@color/btn_enabled"
        android:textSize="18sp" />

    <Button
        android:id="@+id/save_car_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_state_list"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/save_car_button"
        android:layout_below="@id/header"
        android:background="@color/light_grey"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/dark_grey"
                android:text="@string/year"/>

            <EditText
                android:id="@+id/year_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14sp"
                android:background="@drawable/spinner_background"
                android:inputType="number"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/dark_grey"
                android:text="@string/make"/>

            <EditText
                android:id="@+id/make_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14sp"
                android:background="@drawable/spinner_background"
                android:inputType="textCapWords"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/dark_grey"
                android:text="@string/model"/>

            <EditText
                android:id="@+id/model_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14sp"
                android:background="@drawable/spinner_background"
                android:inputType="textCapWords"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/dark_grey"
                android:text="@string/trim"/>

            <EditText
                android:id="@+id/trim_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14sp"
                android:background="@drawable/spinner_background"
                android:inputType="textCapWords"
                android:gravity="center"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>