<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp"
    android:background="@color/black">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/settings"
        android:textColor="@color/btn_enabled"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_vehicles"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/my_cars"
                android:textColor="@color/btn_enabled"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/vehicle_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                android:visibility="gone">

                <TextView
                    android:id="@+id/add_vehicle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_grey"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:gravity="center"
                    android:text="@string/add_vehicle"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/about_subhead"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/about"
                android:textColor="@color/btn_enabled"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>