<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="1dp"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:background="@color/light_grey">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/log_fill_up_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="60"
            android:text="@string/log_fill_up"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/button_state_list" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="40"
            android:layout_marginLeft="1dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/view_reports_button"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:text="@string/view_reports"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/button_state_list"/>

            <Button
                android:id="@+id/settings_button"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:layout_marginTop="1dp"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/button_state_list"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
